# carbon-transition-duckdb-lab

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  ROADMAP.md  _msg.txt  pyproject.toml  setup.sh
.github/workflows/: ci.yml  dashboard.yml  data-refresh.yml
dashboard/: README.md  evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: index.md
dashboard/sources/carbon/: connection.yaml  latest.sql  transition.sql
docs/: benchmarking.md  data_model.md  data_quality.md  decomposition.md  forecasting.md  methodology.md  production.md  responsible_use.md  uncertainty.md
examples/: run_sample.py
notebooks/: 01_duckdb_transition_workflow.ipynb  02_score_anatomy_and_sensitivity.ipynb  03_exploratory_analysis.ipynb  04_duckdb_sql_analytics.ipynb  05_data_quality.ipynb  06_decomposition_attribution.ipynb  07_forecasting_scenarios.ipynb  08_benchmarking.ipynb  09_uncertainty.ipynb  run_notebooks.py
profiles/: default.yaml  renewables_focused.yaml  trend_focused.yaml
prompts/: next_agent_prompts.md
reports/sample_run/: top_countries_by_records.csv  transition_numeric_summary.csv  transition_report.md  transition_report_from_runner.md
sql/: 00_load_raw.sql  01_build_marts.sql  02_export_marts.sql
src/carbon_transition_duckdb/: __init__.py  cli.py  config.py  pipeline.py  sample_data.py
src/carbon_transition_duckdb/benchmark/: __init__.py  benchmark.py
src/carbon_transition_duckdb/database/: duckdb_engine.py
src/carbon_transition_duckdb/decomposition/: __init__.py  common.py  indicators.py  intensity.py  kaya.py  lmdi.py
src/carbon_transition_duckdb/forecasting/: __init__.py  scenarios.py  targets.py  trend.py
src/carbon_transition_duckdb/ingestion/: download.py
src/carbon_transition_duckdb/packaging/: __init__.py  snapshot.py
src/carbon_transition_duckdb/quality/: __init__.py  country_groups.py  manifest.py  missingness.py  normalization.py  schema.py
src/carbon_transition_duckdb/reporting/: markdown.py
src/carbon_transition_duckdb/risk/: profiles.py  scoring.py
src/carbon_transition_duckdb/visualization/: plots.py
tests/: test_benchmark.py  test_decomposition_intensity_indicators.py  test_decomposition_kaya.py  test_decomposition_lmdi.py  test_forecasting_scenarios_targets.py  test_forecasting_trend.py  test_packaging_snapshot.py  test_profiles.py  test_quality_country_groups.py  test_quality_manifest.py  test_quality_missingness.py  test_quality_normalization.py  test_quality_schema.py  test_report.py  test_sample_data.py  test_scoring.py  test_uncertainty.py
transform/: dbt_project.yml  profiles.yml
(+8 files in other folders)
