[tool.poetry]
name = "carbon-transition-duckdb-lab"
version = "0.1.0"
description = "Local DuckDB lakehouse for climate and energy-transition analytics."
authors = ["Diogo Ribeiro <diogo_dj@hotmail.com>"]
readme = "README.md"
packages = [{ include = "carbon_transition_duckdb", from = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
duckdb = "^1.5.2"
pandas = "^2.2.3"
typer = ">=0.12.5,<1.0"
rich = "^13.9.4"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"
mypy = "^1.13.0"
nbformat = "^5.10.4"

[tool.poetry.scripts]
carbon-duckdb = "carbon_transition_duckdb.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
