[tool.poetry]
name = "carbon-transition-duckdb-lab"
version = "0.5.0"
description = "Local DuckDB lakehouse for climate and energy-transition analytics."
authors = ["Diogo Ribeiro <diogo_dj@hotmail.com>"]
readme = "README.md"
packages = [{ include = "carbon_transition_duckdb", from = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
duckdb = "^1.5.2"
pandas = "^2.2.3"
typer = ">=0.12.5,<1.0"
rich = "^13.9.4"
matplotlib = "^3.9.2"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"
mypy = "^1.13.0"
nbformat = "^5.10.4"
nbmake = "^1.5.4"
ipykernel = "^6.29.5"
dbt-duckdb = ">=1.9,<1.10"
dbt-core = ">=1.9,<2.0"

[tool.poetry.scripts]
carbon-duckdb = "carbon_transition_duckdb.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.flake8-bugbear]
# Typer relies on calling Option/Argument in argument defaults by design.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# These libraries do not ship type information in every environment (e.g. a
# clean CI runner has no pandas stubs). Treat them as untyped consistently.
module = ["pandas.*", "duckdb.*", "matplotlib.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
